Custom scrollbar fixes

--- a/shared/naturalcrit/codeEditor/codeEditor.less
+++ b/shared/naturalcrit/codeEditor/codeEditor.less
@@ -24,18 +24,13 @@
     animation-duration: 0.4s;
   }
 
-  .CodeMirror-sizer {
-    padding-right: 0 !important;
-    //this setting must be !important, because CodeMirror sets it inline. Achieves overlay scrollbar
-  }
-
   .CodeMirror-vscrollbar {
     &::-webkit-scrollbar {
       width: 20px;
     }
     &::-webkit-scrollbar-thumb {
       width: 20px;
-      background: linear-gradient(90deg, #85858599 15px, #80808000 15px);
+      background: linear-gradient(90deg, #858585 15px, #808080 15px);
     }
   }
 
